--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ html {
     left: 10px;
     top: 10px;;
     position: absolute;
+    font-size: 40px;
 }
 
 #btnPanier{
@@ -189,7 +190,13 @@ footer{
     font-size: 16px;
 }
 
-
+#slider_panier{
+    position: fixed;
+    background-color: aqua;
+    z-index: 50;
+    height: 100%;
+    width: 100%;
+}
 
 
 
