--- a/info_product.css
+++ b/info_product.css
@@ -11,3 +11,95 @@ footer{
     line-height: 60px;
     font-size: 16px;
 }
+
+main{
+    margin-top: 120px;
+    width: 100%;
+    height: 100%;
+}
+
+#idHeader{
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 60px;
+    background-color: rgb(193, 192, 192);
+    position: fixed;
+    font-size: 5vh;
+    z-index: 1000;
+    align-items: center;
+}
+
+
+.page_title{
+    margin: 0;
+    padding: 0;
+    left: 10px;
+    top: 10px;;
+    position: absolute;
+    font-size: 40px;
+}
+
+#buttonRetour{
+    position: fixed;
+    z-index: 50;
+    top: 80px;
+    left: 20px;
+    height: 40px;
+    width: 40px;
+    border-radius: 10px;
+    transition: color, 0.3s ease;
+}
+
+#buttonRetour:hover{
+    background-color: rgb(75, 75, 75);
+    cursor: pointer;
+}
+
+#container{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+#img{
+    flex: 1;
+    width: 50%;
+}
+
+.img_article{
+    width: 100%;
+    height: 100%;
+}
+
+#name{
+    font-size: 60px;
+}
+
+#price{
+    font-size: 40px;
+    color: lightcoral;
+}
+
+#desc{
+    font-size: 20px;
+    margin: 20px;
+    border-radius: 10px;
+    border: solid black 1px;
+    background-color: white;
+    padding: 10px;
+}
+
+#infos{
+    flex: 1;
+    width: 50%;
+    text-align: center;
+    background-color: lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 20px;
+}
