--- a/index.css
+++ b/index.css
@@ -1,6 +1,12 @@
 html {
     scroll-behavior: smooth;
     font-family: 'Courier New', Courier, monospace;
+    width: 100%;
+    height: 100%;
+}
+
+body{
+    margin: 0;
 }
 
 #idHeader{
@@ -294,5 +300,13 @@ footer{
 #btn_achat:hover{
     background-color: darkgreen;
     transform: scale(1.05);
+}
+
+#total_price{
+    position: absolute;
+    font-size: 30px;
+    width: 100%;
+    bottom: 120px;
+    text-align: center;
 }
 
