--- a/info_product.css
+++ b/info_product.css
@@ -3,6 +3,10 @@ html{
     font-family: 'Courier New', Courier, monospace;
 }
 
+body{
+    margin: 0;
+}
+
 footer{
     margin-top: 100px;
     height: 60px;
@@ -62,6 +66,7 @@ main{
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: row;
 }
 
 #img{
