--- a/checkout.css
+++ b/checkout.css
@@ -111,6 +111,7 @@ video{
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 20px;
+    margin: 100px;
 }   
 
 
@@ -141,20 +142,23 @@ video{
 }
 
 
-label{
+#payment label{
     text-align: center;
     color: lightcoral;
     margin: 10px;
-    font-size: 20px;
+    font-size: 25px;
     width: 80%;
 }
 
-input{
+#payment input{
     border-radius: 10px;
-    border: rgb(0, 0, 0) solid 2px;
+    border: none;
     width: 70%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
+    font-size: 20px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 #btnPayer{
@@ -162,8 +166,17 @@ input{
     border-radius: 10px;
     width: 200px;
     height: 50px;
-    background-color: lightcoral;
+    background-color: white;
     border: none;
+    font-size: 30px;
+    color: lightcoral;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+#btnPayer:hover {
+    color: white;
+    background-color: lightcoral;
+    cursor: pointer;
 }
 
 
@@ -181,4 +194,31 @@ input{
     color: white;
     margin: 0;
 }
+
+.controls{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+}
+
+.controls button{
+    border: none;
+    width: 30px;
+    height: 30px;
+    margin: 5px;
+    border-radius: 10px;
+    color: white;
+    background-color: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.controls button:hover{
+    background-color: rgba(255, 255, 255, 0.8);
+    color: black;
+}
+
 
