--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body{
     top: 0;
     width: 100%;
     height: 60px;
-    background-color: rgb(193, 192, 192);
+    background-color: rgba(255, 255, 255, 0.8);
     position: fixed;
     font-size: 5vh;
     z-index: 1000;
@@ -27,13 +27,19 @@ body{
     height: 70px;
 }
 
-.page_title{
+.page_title {
     margin: 0;
     padding: 0;
     left: 10px;
     top: 10px;;
     position: absolute;
     font-size: 40px;
+    
+}
+
+.page_title a {
+    text-decoration: none;
+    color: black;
 }
 
 #btnPanier{
@@ -59,19 +65,28 @@ body{
 }
 
 #idInfo{
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     background-color: orange;
     font-size: 24px;
+    height: 800px;
+    background-image: url(assets/index_background_1.jpg);
+    background-position: center center;
+    background-size: cover;
+    margin: 0 5%;
+    border-radius: 20px;
 }
 
 #idNavbar{
-    margin: 0;
-    background-color: blue;
+    margin: 30px 10%;
+    padding: 40px;
     font-size: 20px;
+    border-radius: 20px;
+    /* https://grabient.com/HQVgzAHANKDsCcMQAYCMUC0rhldHs6GywATMvqvLDKajTgGxhSnCMQvKvDLwAsMXCCFoo2fqRFZQ8CEA?angle=225 */
+
+    background: linear-gradient(225deg, #abc8de 0.000%, #c7c9d8 16.667%, #e5cccf 33.333%, #ffd3c7 50.000%, #ffdbc2 66.667%, #ffe4c0 83.333%, #ffedc3 100.000%);
 }
 
 li{
@@ -79,10 +94,14 @@ li{
     transition: background-color 0.5s ease, color 0.5s ease;
     color: gray;
     list-style: none;
+    text-align: center;
+    border-radius: 20px;
 }
 
 li:hover{
-    background-color: lightblue;
+    /* https://grabient.com/HQVgzAHANKDsCcMQAYCMUC0rhldHs6GwATMvqvLDCatTgGxhQnAMTPIvDLwAsNNDDBDsfEiEyheQA?angle=225 */
+
+    background: linear-gradient(225deg, #8eaac1 0.000%, #aaabbb 16.667%, #c8afb2 33.333%, #e4b6aa 50.000%, #fdbea5 66.667%, #ffc7a3 83.333%, #ffd0a6 100.000%);
     cursor: pointer;
     color: black;
 }
@@ -102,16 +121,18 @@ li:hover{
 
 .article{
     margin: 5px;
-    background-color: aquamarine;
+    /* https://grabient.com/HQdgDAHANMDMEE4oEZgDYIhgJjV0YALCsMrMcNgmjGNTMmGLdtg0zOSEA?angle=225 */
+
+    background: linear-gradient(225deg, #f8f4ff 0.000%, #ede3e6 25.000%, #d5cfc7 50.000%, #b7b8af 75.000%, #989f9d 100.000%);
     text-align: center;
     height: 600px;
-    border: 2px solid black;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     transform: scale(1);
     transition: transform 0.3s ease, opacity 0.3s ease;
-    cursor: pointer;
 }
 
 
@@ -138,13 +159,18 @@ li:hover{
 
 
 .img_article{
-    width: 100%;
     height: 50%;
+    transition: filter 0.3s ease;
+    margin-left: 4%;
+    margin-right: 4%;
+    border-radius: 10px;
+    border: solid 1px gray;
+    width: 80%;
+    object-fit: cover;
 }
 
 
 .article p{
-    font-size: 24px;
     font-weight: bold;
     margin: 10px 0;
     flex: initial;
@@ -165,7 +191,68 @@ li:hover{
     font-weight: bold;
     width: 100%;
     text-align:center;
+    color: lightcoral;
 }
+
+.desc_article{
+    opacity: 0%;
+    transition: opacity 0.3s ease;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    position: absolute;
+    left: 40px;
+    right: 40px;
+}
+
+.article:hover .desc_article{
+    font-weight: bold;
+    text-align: center;
+    opacity: 100%;
+
+}
+
+.article:hover .img_article{
+    filter: blur(2px);
+}
+
+.controls button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex: initial;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+    color: salmon;
+    background-color: whitesmoke;
+    font-size: 20px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.controls button:hover{
+    background-color: #e4b6aa;
+    color: white;
+}
+
+.art_name{
+    font-size: 40px;
+    color: #2d3888;
+}
+
+.art_price{
+    font-size: 30px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.182);
+    text-align: center;
+    width: 200px;
+    border-radius: 10px;
+}
+
+
 
 #btnRetourHaut{
     position: fixed;
@@ -199,12 +286,12 @@ footer{
 #slider_panier{
     position: fixed;
     right: 0;
-    top: 50px;
-    background-color: rgb(213, 213, 213);
+    top: 60px;
+    background-color: rgb(255, 255, 255);
     z-index: 100;
     height: 100%;
     width: 400px;
-    opacity: 95%;
+    opacity: 90%;
     transform: translateX(400px);
     transition: transform 0.3s ease-out, opacity 0.3s ease-out;
     overflow: auto;
@@ -238,6 +325,8 @@ footer{
     background-color: rgb(200, 200, 200);
     transform: scale(1.02);
 }
+
+
 
 .art_panier>*{
     flex: 1;
@@ -321,9 +410,23 @@ footer{
 }
 
 #tableau{
-    background-color: lightgray;
+    text-align: center;
+    /* https://grabient.com/HQDgrAzANMBsCcB2KBGYAGMsoFp3BXjBhXXRIgCZd8xEQbhKAWaPYK5d9CYjZrvkKUgA?angle=180 */
+
+    background: linear-gradient(180deg, #a9caff 0.000%, #b8cbff 16.667%, #d3cbff 33.333%, #f0c8f9 50.000%, #ffc5f1 66.667%, #ffc0ec 83.333%, #ffbaec 100.000%);
+    border-collapse: separate;
+    border-spacing: 10px;
+    border-radius: 20px;
+}
+
+#tableau td, th{
+    border: 1px solid black;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
 }
 
 #name_tableau{
     font-size: 30px;
 }
+
