--- a/checkout.css
+++ b/checkout.css
@@ -51,7 +51,9 @@ video{
     top: 0;
     width: 100%;
     height: 60px;
-    background-color: rgb(193, 192, 192);
+    backdrop-filter: blur(10px);
+    border: solid rgba(255, 255, 255, 0.3) 1px;
+    background-color: rgba(0, 0, 0, 0.2);
     position: fixed;
     font-size: 5vh;
     z-index: 1000;
@@ -80,7 +82,6 @@ video{
 }
 
 #buttonRetour:hover{
-    background-color: rgb(75, 75, 75);
     cursor: pointer;
 }
 
@@ -97,6 +98,7 @@ video{
 }
 
 #infos{
+    padding-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -109,7 +111,6 @@ video{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 20px;
     margin: 100px;
 }   
@@ -128,7 +129,7 @@ video{
     width: 500px;
     height: 200px;
     color: white;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .art_checkout>*{
@@ -159,6 +160,7 @@ video{
     font-size: 20px;
     margin-bottom: 20px;
     text-align: center;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
 }
 
 #btnPayer{
@@ -183,13 +185,13 @@ video{
 #name_payment{
     text-align: center;
     font-size: 40px;
-    color: white;
+    color: black;
 }
 
 #price{
     padding: 10px;
     border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.6);
     font-size: 40px;
     color: white;
     margin: 0;
@@ -222,3 +224,13 @@ video{
 }
 
 
+.glass{
+    backdrop-filter: blur(18px);
+    border: solid rgba(255, 255, 255, 0.3) 1px;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.7); 
+    transition: box-shadow 0.5s ease;
+}
+
+.glass:hover{
+    box-shadow: 0 16px 32px rgba(0, 0, 0, 1);
+}
