--- a/infos.css
+++ b/infos.css
@@ -13,6 +13,9 @@ body{
 }
 
 footer{
+    position: absolute;
+    top: 200vh;
+    width: 100%;
     height: 60px;
     background-color: rgb(193, 192, 192);
     text-align: center;
@@ -105,13 +108,16 @@ main{
     padding: 40px;
 }
 
-#background_img{
+#background_video{
     position: absolute;
     z-index: -1;
     top: 0;
     left: 0;
     overflow: hidden;
     width: 100%;
+    height: 200vh;
+    object-fit: cover;
+    
 }
 
 
@@ -154,6 +160,10 @@ main{
     border-radius: 20px; 
 }
 
+#carroussel_container{
+    position: relative;
+}
+
 #carroussel_title{
     z-index: 10;
     padding: 20px;
@@ -162,6 +172,7 @@ main{
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
 }
+
 
 #carroussel_desc{
     z-index: 10;
@@ -181,4 +192,29 @@ main{
 
 .glass:hover{
     box-shadow: 0 16px 32px rgba(0, 0, 0, 1);
+}
+
+#btn_carroussel_left{
+    position: absolute;
+    top: 50%;
+    left: 5%;
+}
+
+#btn_carroussel_right{
+    position: absolute;
+    top: 50%;
+    right: 5%;
+}
+
+.btn_carroussel{
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+    transition: transform, 0.3s ease;
+    font-size: 20px;
+}
+
+.btn_carroussel:hover{
+    transform: translateY(-5px);
 }
