--- a/info_product.css
+++ b/info_product.css
@@ -8,12 +8,15 @@ body{
 }
 
 footer{
+    position: absolute;
     margin-top: 100px;
     height: 60px;
     background-color: rgb(193, 192, 192);
     text-align: center;
     line-height: 60px;
     font-size: 16px;
+    top: 150%;
+    width: 100%;
 }
 
 main{
@@ -27,11 +30,12 @@ main{
     top: 0;
     width: 100%;
     height: 60px;
-    background-color: rgb(193, 192, 192);
+    background-color: rgba(193, 192, 192,  0.3);
     position: fixed;
     font-size: 5vh;
     z-index: 1000;
     align-items: center;
+    backdrop-filter: blur(15px);
 }
 
 
@@ -61,50 +65,120 @@ main{
 }
 
 #container{
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: row;
+    margin: 5%;
+    height: 800px;
 }
 
 #img{
     flex: 1;
     width: 50%;
+    border-radius: 20px;
+    margin-right: 5%;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.7); 
+    background-size: cover;
+    background-position: center center;
+
 }
 
 .img_article{
     width: 100%;
     height: 100%;
+    border-radius: 20px;
 }
 
 #name{
     font-size: 60px;
+    color: white;
 }
 
 #price{
-    font-size: 40px;
+    font-size: 50px;
     color: lightcoral;
 }
 
 #desc{
     font-size: 20px;
-    margin: 20px;
+    margin: 10%;
     border-radius: 10px;
-    border: solid black 1px;
-    background-color: white;
+    color: white;
     padding: 10px;
+    font-size: 25px;
 }
 
 #infos{
     flex: 1;
     width: 50%;
     text-align: center;
-    background-color: lightgrey;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#caracteristic{
+    padding: 20px;
+    margin-top: 40px;
+    border-radius: 20px;
+    margin-left: 52.5%;
+    margin-right: 5%;
+    font-size: 30px;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#caracteristic p{
+    color: white;
+}
+
+.fa-solid{
+    padding-right: 10px;
+}
+
+.fa-battery-full{
+    color: green;
+}
+
+.fa-signal{
+    color: red;
+}
+
+.fa-clock{
+    color: lightblue;
+}
+
+.fa-gauge-high{
+    color: yellowgreen;
+}
+
+
+.caracteristic_container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.glass{
+    backdrop-filter: blur(15px);
+    border: solid rgba(255, 255, 255, 0.3) 1px;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.7); 
+    transition: box-shadow 0.5s ease;
+}
+
+.glass:hover{
+    box-shadow: 0 16px 32px rgba(0, 0, 0, 1);
+}
+
+#img_background{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    object-fit: cover;
+    height: 100vh;
+    z-index: -1;
 }
