--- a/checkout.css
+++ b/checkout.css
@@ -61,13 +61,19 @@ video{
 }
 
 
-.page_title{
+.page_title {
     margin: 0;
     padding: 0;
     left: 10px;
     top: 10px;;
     position: absolute;
     font-size: 40px;
+    
+}
+
+.page_title a {
+    text-decoration: none;
+    color: black;
 }
 
 #buttonRetour{
