--- a/infos.css
+++ b/infos.css
@@ -47,14 +47,39 @@ main{
     align-items: center;
 }
 
-
-.page_title{
+.page_title {
     margin: 0;
     padding: 0;
     left: 10px;
     top: 10px;;
     position: absolute;
     font-size: 40px;
+    
+}
+
+.page_title a {
+    text-decoration: none;
+    color: black;
+}
+
+#btnRetourHaut{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    background-color: gray;
+    color: white;
+    cursor: pointer;
+    opacity: 0.7;
+    transition: opacity 0.3s ease;
+    border-radius: 10px;
+    z-index: 1000;
+}
+
+#btnRetourHaut:hover{
+    opacity: 1.0;
 }
 
 #buttonRetour{
@@ -82,7 +107,8 @@ main{
 
     /* background: linear-gradient(135deg, #ffffc4 0.000%, #ff6164 50.000%, #b00012 100.000%); */
     margin: 100px 10%;
-    height: 400px;
+    height: auto;
+    padding: 20px;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.2);
 }
@@ -217,4 +243,27 @@ main{
 
 .btn_carroussel:hover{
     transform: translateY(-5px);
+}
+
+#link_wikipedia{
+    width: 200px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+#img_link_wikipedia{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+#img_link_wikipedia:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.7);
+}
+
+#balise_haut{
+    position: absolute;
+    top: 0;
 }
