--- a/checkout.css
+++ b/checkout.css
@@ -119,6 +119,7 @@ video{
     flex-direction: column;
     border-radius: 20px;
     margin: 100px;
+    padding: 0  40px;
 }   
 
 
@@ -239,4 +240,10 @@ video{
 
 .glass:hover{
     box-shadow: 0 16px 32px rgba(0, 0, 0, 1);
+}
+
+#error {
+    color: red;
+    font-size: 20px;
+    text-align: center;
 }
